--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,7 +32,7 @@
                 <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="icono de cliente">
             </a>
             <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
-            <input class="desktop_hide" type="checkbox" name="menu_mobile" id="menu_mobile">
+                <input class="desktop_hide" type="checkbox" name="menu_mobile" id="menu_mobile">
             <div class="nav_mobile">
                 <div class="close">X
                 </div>
@@ -108,7 +108,8 @@
                         </p>
                     </div>
                 </a>
-                <a title="enlace a eventos (work in progress)" href="#" class="banner banner_three eventos_banner desktop_show">
+                <a title="enlace a eventos (work in progress)" href="#"
+                    class="banner banner_three eventos_banner desktop_show">
                     <div class="eventos_texto_banner sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Torneo Solidario</h4>
                         <p>
@@ -120,7 +121,8 @@
                         </p>
                     </div>
                 </a>
-                <a title="enlace a eventos (work in progress)" href="#" class="banner banner_three eventos_banner desktop_show">
+                <a title="enlace a eventos (work in progress)" href="#"
+                    class="banner banner_three eventos_banner desktop_show">
                     <div class="eventos_texto_banner sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Limpiando Juntos</h4>
                         <p>
@@ -186,7 +188,8 @@
             </div>
         </section>
         <div id="reserva_clases" class="dos_botones">
-            <a title="enlace a reservar pista (work in progress)" href="#" class="link_button blue_btn">Reserva Pista</a>
+            <a title="enlace a reservar pista (work in progress)" href="#" class="link_button blue_btn">Reserva
+                Pista</a>
             <a title="enlace a clases (work in progress)" href="#" class="link_button blue_btn">Clases</a>
         </div>
         <section id="home_club">
@@ -194,11 +197,15 @@
             <div id="botones_dedo">
                 <div class="imagen_club desktop_show">
                 </div>
-                <a title="enlace al apartado la asociacion del club" href="/HTML/club.html#asociacion" class="link_button">
-                    <p>La asociación</p><img src="/public/assets/icons/HandCursor.svg" alt="">
+                <a title="enlace al apartado la asociacion del club" href="/HTML/club.html#asociacion"
+                    class="link_button">
+                    <p>La asociación</p><img src="/public/assets/icons/HandCursor.svg"
+                        alt="imagen de una mano apuntando al enlace">
                 </a>
-                <a title="enlace al compromiso medioambiental del club" href="/HTML/club.html#compromiso_medioambiental" class="link_button">
-                    <p> Compromiso <br>medioambiental</p><img src="/public/assets/icons/HandCursor.svg" alt="">
+                <a title="enlace al compromiso medioambiental del club" href="/HTML/club.html#compromiso_medioambiental"
+                    class="link_button">
+                    <p> Compromiso <br>medioambiental</p><img src="/public/assets/icons/HandCursor.svg"
+                        alt="imagen de una mano apuntando al enlace">
                 </a>
             </div>
         </section>
@@ -236,13 +243,17 @@
     <footer>
         <div class="footer_container">
             <div id="links">
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png" alt="">
+                <a title="enlace a Youtube (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png"
+                        alt="logotipo de Youtube">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/Instagram.png" alt="">
+                <a title="enlace a Instagram (work in progress)" href="#"> <img src="/public/assets/icons/Instagram.png"
+                        alt="logotipo de Instagram">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png" alt="">
+                <a title="enlace a TwitterX (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png"
+                        alt="logotipo de TwitterX">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png" alt="">
+                <a title="enlace a Facebook (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png"
+                        alt="logotipo de Facebook">
                 </a>
             </div>
             <div class="footer_desktop">
