--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -196,17 +196,17 @@
     <footer>
         <div class="footer_container">
             <div id="links">
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png"
-                        alt="">
+                <a title="enlace a Youtube (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png"
+                        alt="logotipo de Youtube">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img
-                        src="/public/assets/icons/Instagram.png" alt="">
+                <a title="enlace a Instagram (work in progress)" href="#"> <img
+                        src="/public/assets/icons/Instagram.png" alt="logotipo de Instagram">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png"
-                        alt="">
+                <a title="enlace a TwitterX (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png"
+                        alt="logotipo de TwitterX">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png"
-                        alt="">
+                <a title="enlace a Facebook (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png"
+                        alt="logotipo de Facebook">
                 </a>
             </div>
             <div class="footer_desktop">
