--- a/HTML/club.html
+++ b/HTML/club.html
@@ -172,22 +172,22 @@
                 deseosos de aumentar nuestras actividades ¿nos ayudarás?
             </p>
         </section>
-        <a href="/HTML/socios.html" class="orange_btn link_button">¡Quiero ser Socio!</a>
+        <a title="enlace a socios" href="/HTML/socios.html" class="orange_btn link_button">¡Quiero ser Socio!</a>
     </main>
     <footer>
         <div class="footer_container">
             <div id="links">
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png"
-                        alt="">
+                <a title="enlace a Youtube (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png"
+                        alt="logotipo de Youtube">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img
-                        src="/public/assets/icons/Instagram.png" alt="">
+                <a title="enlace a Instagram (work in progress)" href="#"> <img
+                        src="/public/assets/icons/Instagram.png" alt="logotipo de Instagram">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png"
-                        alt="">
+                <a title="enlace a TwitterX (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png"
+                        alt="logotipo de TwitterX">
                 </a>
-                <a title="enlace a red social (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png"
-                        alt="">
+                <a title="enlace a Facebook (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png"
+                        alt="logotipo de Facebook">
                 </a>
             </div>
             <div class="footer_desktop">
