--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="banner_verde">
             <a title="enlace a home" href="/HTML/index.html">
-                <img class="header_img" src="/public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
+                <img class="header_img" src="../public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
             </a>
             <div id="desktop_menu">
                 <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show orange_btn"
@@ -21,17 +21,17 @@
                 </a>
                 <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show"
                     id="boton_identificate">
-                    <img src="/public/assets/icons/Customer.svg" alt="icono de cliente">
+                    <img src="../public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
                 </a>
                 <a title="enlace a carrito (work in progress)" href="#" class="carrito">
-                    <img src="/public/assets/icons/Shopping_Basket.svg" alt="icono de carrito de la compra">
+                    <img src="../public/assets/icons/Shopping_Basket.svg" alt="icono de carrito de la compra">
                 </a>
             </div>
             <a title="enlace a socios" href="/HTML/socios.html">
-                <img class="desktop_hide" src="/public/assets/icons/Customer.svg" alt="icono de cliente">
+                <img class="desktop_hide" src="../public/assets/icons/Customer.svg" alt="icono de cliente">
             </a>
-            <img class="desktop_hide" src="/public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
+            <img class="desktop_hide" src="../public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
                 <input class="desktop_hide" type="checkbox" name="menu_mobile" id="menu_mobile">
             <div class="nav_mobile">
                 <div class="close">X
@@ -199,12 +199,12 @@
                 </div>
                 <a title="enlace al apartado la asociacion del club" href="/HTML/club.html#asociacion"
                     class="link_button">
-                    <p>La asociación</p><img src="/public/assets/icons/HandCursor.svg"
+                    <p>La asociación</p><img src="../public/assets/icons/HandCursor.svg"
                         alt="imagen de una mano apuntando al enlace">
                 </a>
                 <a title="enlace al compromiso medioambiental del club" href="/HTML/club.html#compromiso_medioambiental"
                     class="link_button">
-                    <p> Compromiso <br>medioambiental</p><img src="/public/assets/icons/HandCursor.svg"
+                    <p> Compromiso <br>medioambiental</p><img src="../public/assets/icons/HandCursor.svg"
                         alt="imagen de una mano apuntando al enlace">
                 </a>
             </div>
@@ -243,16 +243,16 @@
     <footer>
         <div class="footer_container">
             <div id="links">
-                <a title="enlace a Youtube (work in progress)" href="#"> <img src="/public/assets/icons/YouTube.png"
+                <a title="enlace a Youtube (work in progress)" href="#"> <img src="../public/assets/icons/YouTube.png"
                         alt="logotipo de Youtube">
                 </a>
-                <a title="enlace a Instagram (work in progress)" href="#"> <img src="/public/assets/icons/Instagram.png"
+                <a title="enlace a Instagram (work in progress)" href="#"> <img src="../public/assets/icons/Instagram.png"
                         alt="logotipo de Instagram">
                 </a>
-                <a title="enlace a TwitterX (work in progress)" href="#"> <img src="/public/assets/icons/TwitterX.png"
+                <a title="enlace a TwitterX (work in progress)" href="#"> <img src="../public/assets/icons/TwitterX.png"
                         alt="logotipo de TwitterX">
                 </a>
-                <a title="enlace a Facebook (work in progress)" href="#"> <img src="/public/assets/icons/Facebook.png"
+                <a title="enlace a Facebook (work in progress)" href="#"> <img src="../public/assets/icons/Facebook.png"
                         alt="logotipo de Facebook">
                 </a>
             </div>
