añadidas cosas finales

--- a/HTML/club.html
+++ b/HTML/club.html
@@ -10,15 +10,15 @@
 <body>
     <header>
         <div class="banner_verde">
-            <a title="enlace a home" href="/HTML/index.html">
+            <a title="enlace a home" href="index.html">
                 <img class="header_img" src="../public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
             </a>
             <div id="desktop_menu">
-                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show orange_btn"
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show orange_btn"
                     id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show"
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show"
                     id="boton_identificate">
                     <img src="../public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
@@ -27,7 +27,7 @@
                     <img src="../public/assets/icons/Shopping_Basket.svg" alt="icono de carrito de la compra">
                 </a>
             </div>
-            <a title="enlace a socios" href="/HTML/socios.html">
+            <a title="enlace a socios" href="socios.html">
                 <img class="desktop_hide" src="../public/assets/icons/Customer.svg" alt="icono de cliente">
             </a>
             <img class="desktop_hide" src="../public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
@@ -37,8 +37,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a title="enlace a club" href="/HTML/club.html">El Club</a></li>
-                        <li><a title="enlace a tienda" href="/HTML/tienda.html">Tienda</a></li>
+                        <li><a title="enlace a club" href="club.html">El Club</a></li>
+                        <li><a title="enlace a tienda" href="tienda.html">Tienda</a></li>
                         <li><a title="enlace a reserva (work in progress)" href="#">Reserva</a></li>
                         <li><a title="enlace a clases (work in progress)" href="#">Clases</a></li>
                         <li><a title="enlace a contacto (work in progress)" href="#">Contacto</a></li>
@@ -53,8 +53,8 @@
                 la participación ciudadana.</p>
             <nav class="desktop_show">
                 <ul>
-                    <li><a href="/HTML/club.html">El Club</a></li>
-                    <li><a href="/HTML/tienda.html">Tienda</a></li>
+                    <li><a href="club.html">El Club</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
                     <li><a href="#">Reserva</a></li>
                     <li><a href="#">Clases</a></li>
                     <li><a href="#">Contacto</a></li>
@@ -103,7 +103,7 @@
                 </p>
             </div>
         </section>
-        <a title="enlace a socios" href="/HTML/socios.html" class="blue_btn link_button">¡Quiero ser Socio!</a>
+        <a title="enlace a socios" href="socios.html" class="blue_btn link_button">¡Quiero ser Socio!</a>
         <section class="organizacion">
             <h2>¿Como estamos organizados?</h2>
             <div class="cinco_fotos">
@@ -172,7 +172,7 @@
                 deseosos de aumentar nuestras actividades ¿nos ayudarás?
             </p>
         </section>
-        <a title="enlace a socios" href="/HTML/socios.html" class="orange_btn link_button">¡Quiero ser Socio!</a>
+        <a title="enlace a socios" href="socios.html" class="orange_btn link_button">¡Quiero ser Socio!</a>
     </main>
     <footer>
         <div class="footer_container">
