--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,15 +11,15 @@
 <body>
     <header>
         <div class="banner_verde">
-            <a title="enlace a home" href="/HTML/index.html">
+            <a title="enlace a home" href="index.html">
                 <img class="header_img" src="../public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
             </a>
             <div id="desktop_menu">
-                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show orange_btn"
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show orange_btn"
                     id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show"
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show"
                     id="boton_identificate">
                     <img src="../public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
@@ -28,7 +28,7 @@
                     <img src="../public/assets/icons/Shopping_Basket.svg" alt="icono de carrito de la compra">
                 </a>
             </div>
-            <a title="enlace a socios" href="/HTML/socios.html">
+            <a title="enlace a socios" href="socios.html">
                 <img class="desktop_hide" src="../public/assets/icons/Customer.svg" alt="icono de cliente">
             </a>
             <img class="desktop_hide" src="../public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
@@ -38,8 +38,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a title="enlace a club" href="/HTML/club.html">El Club</a></li>
-                        <li><a title="enlace a tienda" href="/HTML/tienda.html">Tienda</a></li>
+                        <li><a title="enlace a club" href="club.html">El Club</a></li>
+                        <li><a title="enlace a tienda" href="tienda.html">Tienda</a></li>
                         <li><a title="enlace a reserva (work in progress)" href="#">Reserva</a></li>
                         <li><a title="enlace a clases (work in progress)" href="#">Clases</a></li>
                         <li><a title="enlace a contacto (work in progress)" href="#">Contacto</a></li>
@@ -55,8 +55,8 @@
                 continuación</p>
             <nav class="desktop_show">
                 <ul>
-                    <li><a href="/HTML/club.html">El Club</a></li>
-                    <li><a href="/HTML/tienda.html">Tienda</a></li>
+                    <li><a href="club.html">El Club</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
                     <li><a href="#">Reserva</a></li>
                     <li><a href="#">Clases</a></li>
                     <li><a href="#">Contacto</a></li>
@@ -68,15 +68,15 @@
     <main id="home">
         <section id="home_socios">
             <div id="socios_btn" class="desktop_hide dos_botones">
-                <a title="enlace a socios" href="/HTML/socios.html" class="link_button blue_btn">Inicia Sesión</a>
-                <a title="enlace a socios" href="/HTML/socios.html" class="link_button blue_btn">Hazte Miembro</a>
+                <a title="enlace a socios" href="socios.html" class="link_button blue_btn">Inicia Sesión</a>
+                <a title="enlace a socios" href="socios.html" class="link_button blue_btn">Hazte Miembro</a>
             </div>
             <h3 class="desktop_hide">Ventajas de ser miembro</h3>
             <p class="desktop_show">¡Bienvenidos a EivissaPadel! Si aún no eres miembro de nuestro club, descubre
                 las ventajas e
                 inscríbete a
                 continuación</p>
-            <a title="enlace a socios" href="/HTML/socios.html">
+            <a title="enlace a socios" href="socios.html">
                 <div class="banner" id="miembro_banner">
                     <div id="miembro_texto_banner" class="sub_banner">
                         <h2 class="desktop_show">Ventajas miembros</h2>
@@ -145,7 +145,7 @@
             <p>En nuestra tienda encontrarás todos los productos vendidos por los socios en su mejor calidad.</p>
             <h3 class="desktop_show">Últimos productos a la venta</h3>
             <div class="banner_desktop">
-                <a title="enlace a tienda" href="/HTML/tienda.html" id="banner_home_tienda" class="banner banner_three">
+                <a title="enlace a tienda" href="tienda.html" id="banner_home_tienda" class="banner banner_three">
                     <div class="sub_banner sub_banner_three">
                         <h4 class="desktop_hide titulo_mini">Último producto a la venta</h4>
                         <h4 class="titulo_mini desktop_show">Pack de 3 pelotas</h4>
@@ -159,7 +159,7 @@
                         </p>
                     </div>
                 </a>
-                <a title="enlace a tienda" href="/HTML/tienda.html" class="banner banner_three desktop_show">
+                <a title="enlace a tienda" href="tienda.html" class="banner banner_three desktop_show">
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Pala Pro de Padel</h4>
                         <p>
@@ -171,7 +171,7 @@
                             categoría, así que no dejes pasar este ofertón, ¡no pasan a menudo!</p>
                     </div>
                 </a>
-                <a title="enlace a tienda" href="/HTML/tienda.html" class="banner banner_three desktop_show">
+                <a title="enlace a tienda" href="tienda.html" class="banner banner_three desktop_show">
                     <div class="sub_banner sub_banner_three">
                         <h4 class="titulo_mini">Camiseta blanca</h4>
                         <p>
@@ -197,12 +197,12 @@
             <div id="botones_dedo">
                 <div class="imagen_club desktop_show">
                 </div>
-                <a title="enlace al apartado la asociacion del club" href="/HTML/club.html#asociacion"
+                <a title="enlace al apartado la asociacion del club" href="club.html#asociacion"
                     class="link_button">
                     <p>La asociación</p><img src="../public/assets/icons/HandCursor.svg"
                         alt="imagen de una mano apuntando al enlace">
                 </a>
-                <a title="enlace al compromiso medioambiental del club" href="/HTML/club.html#compromiso_medioambiental"
+                <a title="enlace al compromiso medioambiental del club" href="club.html#compromiso_medioambiental"
                     class="link_button">
                     <p> Compromiso <br>medioambiental</p><img src="../public/assets/icons/HandCursor.svg"
                         alt="imagen de una mano apuntando al enlace">
