--- a/HTML/socios.html
+++ b/HTML/socios.html
@@ -11,15 +11,15 @@
 <body>
     <header>
         <div class="banner_verde">
-            <a title="enlace a home" href="/HTML/index.html">
+            <a title="enlace a home" href="index.html">
                 <img class="header_img" src="../public/assets/imgs/logotipo_negro.svg" alt="logotipo de EivissaPadel">
             </a>
             <div id="desktop_menu">
-                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show orange_btn"
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show orange_btn"
                     id="boton_miembro">
                     ¡Hazte Miembro!
                 </a>
-                <a title="enlace a socios" href="/HTML/socios.html" class="link_button desktop_show"
+                <a title="enlace a socios" href="socios.html" class="link_button desktop_show"
                     id="boton_identificate">
                     <img src="../public/assets/icons/Customer.svg" alt="icono de cliente">
                     Identifícate
@@ -28,7 +28,7 @@
                     <img src="../public/assets/icons/Shopping_Basket.svg" alt="icono de carrito de la compra">
                 </a>
             </div>
-            <a title="enlace a socios" href="/HTML/socios.html">
+            <a title="enlace a socios" href="socios.html">
                 <img class="desktop_hide" src="../public/assets/icons/Customer.svg" alt="icono de cliente">
             </a>
             <img class="desktop_hide" src="../public/assets/icons/Menu.svg" alt="icono de menu de hamburguesa">
@@ -38,8 +38,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a title="enlace a club" href="/HTML/club.html">El Club</a></li>
-                        <li><a title="enlace a tienda" href="/HTML/tienda.html">Tienda</a></li>
+                        <li><a title="enlace a club" href="club.html">El Club</a></li>
+                        <li><a title="enlace a tienda" href="tienda.html">Tienda</a></li>
                         <li><a title="enlace a reserva (work in progress)" href="#">Reserva</a></li>
                         <li><a title="enlace a clases (work in progress)" href="#">Clases</a></li>
                         <li><a title="enlace a contacto (work in progress)" href="#">Contacto</a></li>
@@ -55,8 +55,8 @@
                 continuación</p>
             <nav class="desktop_show">
                 <ul>
-                    <li><a href="/HTML/club.html">El Club</a></li>
-                    <li><a href="/HTML/tienda.html">Tienda</a></li>
+                    <li><a href="club.html">El Club</a></li>
+                    <li><a href="tienda.html">Tienda</a></li>
                     <li><a href="#">Reserva</a></li>
                     <li><a href="#">Clases</a></li>
                     <li><a href="#">Contacto</a></li>
@@ -99,7 +99,7 @@
                     un estilo de vida activo.
                 </p>
             </section>
-            <a title="enlace al club" href="/HTML/club.html" class="blue_btn link_button">Quiero saber más sobre el
+            <a title="enlace al club" href="club.html" class="blue_btn link_button">Quiero saber más sobre el
                 club</a>
         </section>
         <section id="inscripcion">
